--- a/index.html
+++ b/index.html
@@ -46,66 +46,49 @@
                 <ul class="cuisine-nav">
                     <li>
                         <a href="regional-cuisines.html#sichuan-cuisine" class="cuisine-nav-item">
-                            <div class="cuisine-icon">
-                                <img src="images/cuisine-icons/sichuan-icon.png" alt="川菜图标" 
-                                     onerror="this.onerror=null; this.src='images/placeholder.png';">
-                            </div>
+                            <div class="cuisine-icon" data-initial="川"></div>
                             <span class="cuisine-name">川菜 Sichuan</span>
                         </a>
                     </li>
                     <li>
                         <a href="regional-cuisines.html#cantonese-cuisine" class="cuisine-nav-item">
-                            <div class="cuisine-icon">
-                                <img src="/images/cuisine-icons/cantonese-icon.png" alt="粤菜图标">
-                            </div>
+                            <div class="cuisine-icon" data-initial="粤"></div>
                             <span class="cuisine-name">粤菜 Cantonese</span>
                         </a>
                     </li>
                     <li>
                         <a href="regional-cuisines.html#shandong-cuisine" class="cuisine-nav-item">
-                            <div class="cuisine-icon">
-                                <img src="/images/cuisine-icons/shandong-icon.png" alt="鲁菜图标">
-                            </div>
+                            <div class="cuisine-icon" data-initial="鲁"></div>
                             <span class="cuisine-name">鲁菜 Shandong</span>
                         </a>
                     </li>
                     <li>
                         <a href="regional-cuisines.html#jiangsu-cuisine" class="cuisine-nav-item">
-                            <div class="cuisine-icon">
-                                <img src="/images/cuisine-icons/jiangsu-icon.png" alt="苏菜图标">
-                            </div>
+                            <div class="cuisine-icon" data-initial="苏"></div>
                             <span class="cuisine-name">苏菜 Jiangsu</span>
                         </a>
                     </li>
                     <li>
                         <a href="regional-cuisines.html#zhejiang-cuisine" class="cuisine-nav-item">
-                            <div class="cuisine-icon">
-                                <img src="/images/cuisine-icons/zhejiang-icon.png" alt="浙菜图标">
-                            </div>
+                            <div class="cuisine-icon" data-initial="浙"></div>
                             <span class="cuisine-name">浙菜 Zhejiang</span>
                         </a>
                     </li>
                     <li>
                         <a href="regional-cuisines.html#fujian-cuisine" class="cuisine-nav-item">
-                            <div class="cuisine-icon">
-                                <img src="/images/cuisine-icons/fujian-icon.png" alt="闽菜图标">
-                            </div>
+                            <div class="cuisine-icon" data-initial="闽"></div>
                             <span class="cuisine-name">闽菜 Fujian</span>
                         </a>
                     </li>
                     <li>
                         <a href="regional-cuisines.html#hunan-cuisine" class="cuisine-nav-item">
-                            <div class="cuisine-icon">
-                                <img src="/images/cuisine-icons/hunan-icon.png" alt="湘菜图标">
-                            </div>
+                            <div class="cuisine-icon" data-initial="湘"></div>
                             <span class="cuisine-name">湘菜 Hunan</span>
                         </a>
                     </li>
                     <li>
                         <a href="regional-cuisines.html#anhui-cuisine" class="cuisine-nav-item">
-                            <div class="cuisine-icon">
-                                <img src="/images/cuisine-icons/anhui-icon.png" alt="徽菜图标">
-                            </div>
+                            <div class="cuisine-icon" data-initial="徽"></div>
                             <span class="cuisine-name">徽菜 Anhui</span>
                         </a>
                     </li>
