--- a/regional-cuisines.html
+++ b/regional-cuisines.html
@@ -156,28 +156,28 @@
                         <div class="dish-cards">
                             <div class="dish-card">
                                 <img data-src="images/dishes/sichuan/mapo-tofu.png" alt="麻婆豆腐" class="lazy">
-                                <h4 data-i18n="dish_mapo_tofu">麻婆豆腐</h4>
-                                <p data-i18n="desc_mapo_tofu">麻辣鲜香的豆腐菜肴，由陈麻婆创制于清代</p>
+                                <h4 data-lang-zh="麻婆豆腐" data-lang-en="Mapo Tofu" class="translatable">麻婆豆腐</h4>
+                                <p data-lang-zh="麻辣鲜香的豆腐菜肴，由陈麻婆创制于清代" data-lang-en="Spicy tofu dish created by Chen Mapo during the Qing Dynasty" class="translatable">麻辣鲜香的豆腐菜肴，由陈麻婆创制于清代</p>
                             </div>
                             <div class="dish-card">
                                 <img data-src="images/dishes/sichuan/kung-pao-chicken.png" alt="宫保鸡丁" class="lazy">
-                                <h4 data-i18n="dish_kung_pao">宫保鸡丁</h4>
-                                <p data-i18n="desc_kung_pao">鲜香麻辣的经典川菜，以鸡肉、花生和干辣椒为主要原料</p>
+                                <h4 data-lang-zh="宫保鸡丁" data-lang-en="Kung Pao Chicken" class="translatable">宫保鸡丁</h4>
+                                <p data-lang-zh="鲜香麻辣的经典川菜，以鸡肉、花生和干辣椒为主要原料" data-lang-en="Classic Sichuan dish with chicken, peanuts and dried chili peppers" class="translatable">鲜香麻辣的经典川菜，以鸡肉、花生和干辣椒为主要原料</p>
                             </div>
                             <div class="dish-card">
                                 <img data-src="images/dishes/sichuan/sour-cabbage-fish.png" alt="酸菜鱼" class="lazy">
-                                <h4 data-i18n="dish_sour_fish">酸菜鱼</h4>
-                                <p data-i18n="desc_sour_fish">酸辣开胃的鱼片，配以酸菜提味，是川菜中的经典菜品</p>
+                                <h4 data-lang-zh="酸菜鱼" data-lang-en="Sour Cabbage Fish" class="translatable">酸菜鱼</h4>
+                                <p data-lang-zh="酸辣开胃的鱼片，配以酸菜提味，是川菜中的经典菜品" data-lang-en="Tangy and spicy fish slices with pickled cabbage" class="translatable">酸辣开胃的鱼片，配以酸菜提味，是川菜中的经典菜品</p>
                             </div>
                             <div class="dish-card">
                                 <img data-src="images/dishes/sichuan/twice-cooked-pork.png" alt="回锅肉" class="lazy">
-                                <h4 data-i18n="dish_twice_pork">回锅肉</h4>
-                                <p data-i18n="desc_twice_pork">先煮后炒的经典川菜，肥而不腻，鲜香可口</p>
+                                <h4 data-lang-zh="回锅肉" data-lang-en="Twice-Cooked Pork" class="translatable">回锅肉</h4>
+                                <p data-lang-zh="先煮后炒的经典川菜，肥而不腻，鲜香可口" data-lang-en="Classic dish where pork is first boiled then stir-fried" class="translatable">先煮后炒的经典川菜，肥而不腻，鲜香可口</p>
                             </div>
                             <div class="dish-card">
                                 <img data-src="images/dishes/sichuan/dan-dan-noodles.png" alt="担担面" class="lazy">
-                                <h4 data-i18n="dish_dandan">担担面</h4>
-                                <p data-i18n="desc_dandan">四川特色面食，麻辣鲜香，以花椒、辣椒和芝麻酱调味</p>
+                                <h4 data-lang-zh="担担面" data-lang-en="Dan Dan Noodles" class="translatable">担担面</h4>
+                                <p data-lang-zh="四川特色面食，麻辣鲜香，以花椒、辣椒和芝麻酱调味" data-lang-en="Sichuan specialty noodles with spicy sauce made with Sichuan pepper and chili oil" class="translatable">四川特色面食，麻辣鲜香，以花椒、辣椒和芝麻酱调味</p>
                             </div>
                         </div>
                     </div>
